# text-analytics

./: pyproject.toml
configs/: project.yaml
src/download/: main.py  parse_args.py
src/preprocess/: main.py  parse_args.py  process_livedoor_news.py  remove_stopwords.py  tokenize_df_text.py
src/preprocess/configs/: livedoor_news.yaml
src/utils/: download_file.py  load_yaml.py  read_file_lines.py
