[tool.poetry]
name = "text-analytics"
version = "0.1.0"
description = ""
authors = ["Sakumoto Takuya <tak.sakumoto@gmail.com>"]
readme = "README.md"
packages = [
    { include = "utils", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.1.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"
janome = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
